--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stokke-demo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Stokke demo",
   "main": "index.js",
   "scripts": {
     "start": "npm run serve",
